# ranger_nav

./: .gitignore  falcon_bridge.sh  falcon_test.py  follow_tag.py  run_bridge.sh  show_depth.py  start_detection.sh  start_detection_full.sh  start_falcon_bridge.launch  start_tracer.sh  summary.txt  tag_follower.sh  tag_following_env.txt  tag_following_instruction.txt
habitat-baselines/habitat_baselines/: __init__.py
habitat-baselines/habitat_baselines/config/: default_structured_configs.py
ranger_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.fish  local_setup.sh  setup.fish  setup.sh
ranger_ws/src/ranger_nav/: CMakeLists.txt  package.xml
ranger_ws/src/ranger_nav/config/: tags.yaml
ranger_ws/src/ranger_nav/launch/: apritag.launch  cam515.launch  cam_tag.launch  linear_info.launch  polar.launch
ranger_ws/src/ranger_nav/src/: polar_distance.py  realsense_stream.py
sensor/: falcon_ros_bridge.py  polar_distance.py  polar_goal_tracker.py  realsense_stream.py
test_modules/: __init__.py  fake_goal.sh  fake_polar_goal_pub.py  start_515.sh  test_bridge.sh
test_modules/test_results/bridge_depth_samples/: depth_sample_1778311907260431766_meta.json  depth_sample_1778311907260431766_meter.npy  depth_sample_1778311907260431766_norm.csv  depth_sample_1778311907260431766_norm.npy  depth_sample_1778311907260431766_raw.npy  depth_sample_1778320583861898422_meta.json  depth_sample_1778320583861898422_meter.npy  depth_sample_1778320583861898422_norm.csv  depth_sample_1778320583861898422_norm.npy  depth_sample_1778320583861898422_raw.npy  (+545 more)
(+9 files in other folders)
